--- a/templates/index.html
+++ b/templates/index.html
@@ -5,21 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rastreamento de Preços</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 <body>
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand" href="#">Rastreamento de Preços</a>
-        <form class="form-inline">
-            <input class="form-control mr-sm-2" type="search" placeholder="Buscar produto" aria-label="Search">
+        <form class="form-inline" action="{{ url_for('track_price') }}" method="post">
+            <input class="form-control mr-sm-2" type="search" placeholder="Nome do produto" aria-label="Search" name="product_name">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
         </form>
     </nav>
     <div class="container">
-        <!-- Conteúdo do site vai aqui -->
+        {% if price %}
+            <p>Preço: {{ price }}</p>
+        {% endif %}
     </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="main.js"></script>
 </body>
 </html>
